crates/trestle-tests/tests/snapshots/corpus__corpus_ast_snapshots@01-basics__basics.trsl.snap
---
source: crates/trestle-tests/tests/corpus.rs
expression: program
input_file: crates/trestle-tests/programs/01-basics/basics.trsl
---
Program {
    statements: [
        Let {
            name: "x",
            value: Add(
                Int(
                    5,
                ),
                Int(
                    3,
                ),
            ),
        },
        Let {
            name: "y",
            value: Mul(
                Var(
                    "x",
                ),
                Int(
                    2,
                ),
            ),
        },
    ],
}
